--- a/main.css
+++ b/main.css
@@ -1,45 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-.wrapper{
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-}
-.top-section{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #56F085;
-    color: white;
-    height: 80px;
-}
-.pig1{
-    padding-top: 30px;
-}
-.pig2{
-    padding-top: 40px;
-}
-.para{
-    color: black;
-}
-#btn{
-    padding: 10px;
-    border-radius: 30px;
-    cursor: pointer;
-    background-color: #5865F2;
-    color: white;
-    text-align: center;
-    transition: all .2s ease-in-out;
-    position: relative;
-    top: -7px;
-    left: 9px;
-
-}
+@tailwind base;@tailwind components;@tailwind utilities;*{margin:0;padding:0;box-sizing:border-box}.btn{padding:8px;border-radius:30px;cursor:pointer;background-color:#5865f2;color:#fff;text-align:center;transition:.2s ease-in-out;display:flex;align-items:center;box-shadow:4px 3px 0 2px #000}.btn:hover{box-shadow:0 0 0 0 transparent;background-color:#717cf2}::selection{background-color:#fff;color:#3443e9}.tit{text-shadow:4px 4px 2px #000}.btn-login:hover{box-shadow:4px 3px 0 2px #000}.toglesidebar{transform:translateX(272px)}
